<resources>
    <string name="app_name">나만의 일기2</string>

    <string name="tab_title1">목록</string>
    <string name="tab_title2">작성</string>
    <string name="tab_title3">통계</string>

    <string name="write_today">오늘 작성</string>

    <string name="today_date_format">MM월 dd일</string>
    <string name="today_date_string">O월 O일</string>
    <string name="address_string">OO구 OO동</string>
    <string name="input_contents_hint">내용 입력</string>
    <string name="save_button">저장</string>
    <string name="delete_button">삭제</string>
    <string name="close_button">닫기</string>

    <string name="graph1_title">기분별 비율</string>
    <string name="graph2_title">요일별 기분</string>
    <string name="graph3_title">기분 변화</string>

    <string name="btn_text_title">내용</string>
    <string name="btn_img_title">사진</string>

    <string name="dialog_title">사진 메뉴 선택</string>
    <string name="dialog_menu_1">사진 찍기</string>
    <string name="dialog_menu_2">앨범에서 선택하기</string>
</resources>