<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_picture_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_picture_end_padding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_hor_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_ver_weather_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.14" />

    <ImageView
        android:id="@+id/weatherIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/weather_1"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_begin"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_weather_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_begin"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="00월 00일"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_begin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="서울시 영등포구"
        app:layout_constraintBottom_toBottomOf="@id/dateTextView"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintTop_toTopOf="@id/dateTextView" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_picture_end"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_begin"
        app:layout_constraintTop_toTopOf="@id/gl_hor_begin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/contentInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_contents_hint"
                android:maxLines="1"
                android:textSize="32sp" />

            <ImageView
                android:id="@+id/pictureImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/imagetoset" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/gl_hor_end"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintStart_toStartOf="@id/gl_ver_begin"
        app:layout_constraintTop_toTopOf="@id/gl_hor_picture_end_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.slider.Slider
                android:id="@+id/moodSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="1"
                android:valueTo="5"
                android:stepSize="1"
                app:tickVisible="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/smile1_48" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/smile2_48" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/smile3_48" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/smile4_48" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:src="@drawable/smile5_48" />

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/saveButton"
        style="@style/EditDisplayButton"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_ver_begin"
        app:layout_constraintTop_toTopOf="@id/gl_hor_end" />

    <Button
        android:id="@+id/deleteButton"
        style="@style/EditDisplayButton"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/closeButton"
        app:layout_constraintStart_toStartOf="@id/saveButton"
        app:layout_constraintTop_toTopOf="@id/gl_hor_end" />

    <Button
        android:id="@+id/closeButton"
        style="@style/EditDisplayButton"
        android:text="@string/close_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/gl_ver_end"
        app:layout_constraintTop_toTopOf="@id/gl_hor_end" />
</androidx.constraintlayout.widget.ConstraintLayout>